# ByteRunner

./: .gitignore  CMakeLists.txt  Makefile  README.md  basm  basm2nasm  br  build.sh  dbasm
src/: basm.c  basm2nasm.c  br.c  dbasm.c  image.c  natives.c
src/basm/: basm.c  basm2nasm.c  br.c  dbasm.c  image.c  libbasm.h  natives.c  wrapper.c  wrapper.h
test/expected/: cast.txt  lerpf.txt  memory.txt  rot13.txt  static.txt  static_var.txt
test/src/: 123f.basm  123i.basm  alloc.basm  bits.basm  cast.basm  e.basm  fib.basm  gray.basm  halt.basm  hello.basm  lerpf.basm  memory.basm  natives.hasm  pi.basm  print_i64.basm  rot13.basm  static.basm  static_var.basm  swap.basm
